<resources>
    <string name="app_name">广西气象</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">广西气象局 copyright</string>
    <string name="logout">退出登录</string>
    <string name="login_prompt">账号登陆</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="user_hint">请输入用户名</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="hourly_forecast">逐小时预报</string>
    <string name="weekly_forecast">7天预报</string>
    <string name="update">更新</string>
    <string name="week">周</string>
    <string name="today">今天</string>
    <string name="is_loading">正在加载...</string>
    <string name="input_city_name">请输入城市名</string>
    <string name="input_keywords">请输入关键字</string>
    <string name="hot_city">热门城市</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="sure_delete_cache">确定要清除缓存？</string>
    <string name="delete_cache">清除缓存</string>
    <string name="sure_delete_data">确定要清除数据？</string>
    <string name="delete_data">清除数据</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">再按一次退出</string>
    <string name="publish_time">发布时间：</string>
    <string name="gong">共</string>
    <string name="publish">发布</string>
    <string name="warning">预警</string>
    <string name="warning_detail">预警详情</string>
    <string name="warning_list">预警列表</string>
    <string name="nation_warning">国家级预警</string>
    <string name="province_warning">省级预警</string>
    <string name="city_warning">地市级预警</string>
    <string name="district_warning">区县级预警</string>
    <string name="warning_class">预警种类</string>
    <string name="warning_level">预警等级</string>
    <string name="warning_district">发布区域</string>
    <string name="table">列表</string>
    <string name="map">地图</string>
    <string name="refresh">刷新</string>
    <string name="select_city">城市选择</string>
    <string name="data_isexception">数据异常，图表绘制失败~</string>
    <string name="color_blue">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_orange">橙色</string>
    <string name="color_red">红色</string>
    <string name="sure_logout">确定要退出登录？</string>
    <string name="weather_24h">24小时天气</string>
    <string name="is_locating">定位中...</string>
    <string name="detail">详情</string>
    <string name="dial">拨打</string>
    <string name="support">中国气象局公共气象服务中心提供技术支持</string>
    <string name="aqi_rank">全国AQI排名</string>
    <string name="likely_prompt">温馨提示：</string>
    <string name="check_station">查看监测站</string>
    <string name="jiangshui">过去1h降水量</string>
    <string name="temp">温度</string>
    <string name="rainfall">降水</string>
    <string name="humidity">相对湿度</string>
    <string name="wind_speed">风速风向</string>
    <string name="loudian">露点</string>
    <string name="visible">能见度</string>
    <string name="pressure">气压</string>
    <string name="wind_force_dir">风力风向</string>
    <string name="monitor_station">监测站</string>
    <string name="distance_station">距离该监测站：</string>
    <string name="selecte_area">分级查询</string>
    <string name="current_temp">当前温度</string>
    <string name="high_temp">过去24h最高气温</string>
    <string name="low_temp">过去24h最低气温</string>
    <string name="aver_temp">过去24h平均气温</string>
    <string name="current_humidity">当前湿度</string>
    <string name="high_humidity">过去24h最大湿度</string>
    <string name="low_humidity">过去24h最小湿度</string>
    <string name="current_wind_speed">当前风速</string>
    <string name="high_wind_speed">过去24h最大风速</string>
    <string name="current_pressure">当前气压</string>
    <string name="high_pressure">过去24h最大气压</string>
    <string name="low_pressure">过去24h最小气压</string>
    <string name="current_visible">当前能见度</string>
    <string name="low_visible">过去24h最小能见度</string>
    <string name="statis1hRain">过去1h降水量</string>
    <string name="statis3hRain">过去3h降水量</string>
    <string name="statis6hRain">过去6h降水量</string>
    <string name="statis24hRain">过去24h降水量</string>
    <string name="not_available">暂无</string>
    <string name="city_area">市区</string>
    <string name="layer_rain1">西安市1小时降水量实况</string>
    <string name="layer_temp">西安市1小时温度实况</string>
    <string name="layer_humidity">西安市1小时相对湿度实况</string>
    <string name="layer_pressure">西安市1小时气压实况</string>
    <string name="layer_wind">西安市1小时风速风向实况</string>
    <string name="little_caiyun">小彩云</string>
    <string name="station_id">站点号</string>
    <string name="all">全部</string>
    <string name="auto_stations">国家级</string>
    <string name="pass_1">过去1小时</string>
    <string name="pass_3">过去3小时</string>
    <string name="pass_6">过去6小时</string>
    <string name="pass_24">过去24小时</string>
    <string name="monitor_rank">实况排名</string>
    <string name="nation">全国</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="check">查询</string>
    <string name="select_time_area">选择时间区域</string>
    <string name="select_start_time">选择开始时间</string>
    <string name="select_end_time">选择结束时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="start_big_end">开始时间不能大于或等于结束时间</string>
    <string name="rank_rain_1">过去1小时</string>
    <string name="rank_rain_2">过去24小时</string>
    <string name="rank_rain_3">08时降水(24h)</string>
    <string name="rank_rain_4">20时降水(24h)</string>
    <string name="hour_24">24小时</string>
    <string name="hour_per">逐小时</string>
    <string name="rank_temp_high_1">逐小时高温</string>
    <string name="rank_temp_high_2">过去24小时高温</string>
    <string name="rank_temp_high_3">最高温度(02h)</string>
    <string name="rank_temp_high_4">逐小时低温</string>
    <string name="rank_temp_high_5">过去24小时低温</string>
    <string name="rank_temp_high_6">最低温度(14h)</string>
    <string name="decision_news_1">灾害预警服务快报</string>
    <string name="decision_news_2">两办刊物信息</string>
    <string name="decision_news_3">重大气象信息专报</string>
    <string name="disaster_news_1">昨日灾情</string>
    <string name="disaster_news_2">救灾快报</string>
    <string name="share">分享</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_cancel">取消收藏</string>
    <string name="weather_quality">空气质量</string>
    <string name="setting_save">我的收藏</string>
	<string name="setting_push">要闻推送</string>
	<string name="setting_feedback">意见反馈</string>
	<string name="setting_version">版本号</string>
	<string name="setting_clearcache">清除缓存</string>
	<string name="setting_cleardata">清除数据</string>
	<string name="setting_build">广西气候概况</string>
	<string name="setting_about">关于我们</string>
	<string name="setting_hotline1">气象服务热线</string>
	<string name="setting_hotline2">运行保障热线</string>
	<string name="setting_version_code">版本号</string>
	<string name="setting_quit">退出</string>
	<string name="typhoon_level1">热带低压</string>
    <string name="typhoon_level2">热带风暴</string>
    <string name="typhoon_level3">强热带风暴</string>
    <string name="typhoon_level4">台风</string>
    <string name="typhoon_level5">强台风</string>
    <string name="typhoon_level6">超强台风</string>
    <string name="typhoon_login">登陆地点</string>
    <string name="typhoon_influnce">主要影响区域</string>
    <string name="line_24h">24\n小\n时\n警\n戒\n线</string>
    <string name="line_48h">48\n小\n时\n警\n戒\n线</string>
    <string name="no_typhoon">当前无台风</string>
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    <string name="intro_content1">\t\t\t\t西安市气象局的前身是成立于1931年的西安测候所，1984年成立西安市气象管理处，1988年正式成立西安市气象局，2001年升格为副厅级单位。主要负责为西安经济社会发展、国际化大都市建设、人民群众福祉安康和市委市政府决策提供准确及时的天气预报预警服务。实行西安市委市政府和陕西省气象局双重领导管理体制，执行中央、地方双重财务体制。内设机构为4个机关处室和6个直属事业单位，其中人工影响天气办公室为地方机构。下辖长安、临潼、阎良、灞桥、高陵、鄠邑、蓝田、周至8个区县气象局，各区县局均设有地方机构（人工影响天气办公室暨气象防灾减灾服务中心）。2012年，西安市政府成立气象灾害应急指挥部，总指挥长为分管副市长，副总指挥长为分管秘书长和西安市气象局局长，气象灾害应急指挥部办公室设在西安市气象局。</string>
    <string name="intro_content2">\t\t\t\t西安市国家气象系统各级管理机构实行上级气象主管机构与本级人民政府双重领导，以上级气象主管机构领导为主的管理体制，在上级气象主管机构和本级人民政府领导下，根据授权承担本行政区域内气象工作的政府行政管理职能，依法履行气象主管机构的各项职能。
\n根据《中华人民共和国》和中央机构编制委员会印发的《地方国家气象系统机构改革方案》的有关规定，西安市气象局的主要职责是：
\n1、制定本行政区域气象事业发展规划、计划、并负责本行政区域内气象事业发展规划、计划以及气象业务建设的组织实施；对本行政区域内的气象活动进行指导、监督和行业管理。
\n2、负责本行政区域内气象监测网络工作的管理，依法保护气息探测环境；管理本行政区域内公益气象预报、灾害性天气警报以及农业气象预报、城市环境气象预报、火险气象等级预报等专业气象预报发布；及时提出气象灾害防御措施，并对重大气象灾害做出评估，为本级人民政府组织防御气象灾害提供决策依。
\n3、制定人工影响天气工作方案，并在本级人民政府的领导和协调下，管理、指导和组织实施人工影响天气作业；组织管理雷电灾害防御工作，会同有关部门指导对可能遭受袭击的建筑物、构筑物和其他设施安装雷电灾害防护装置的监测工作。
\n4、负责向本级让人民政府和同级有关部门提出利用、保护气候资源推广应用气候资源区划等成果的建议；组织对气候资源开发利用项目进行气候可行性论证。
\n5、组织开展气象法制宣传教育，负责监督有关气象法规的实施，对违反《中华人民共和国气象法》有关规定的行为依法进行出发，承担有关行政复议和行政诉讼。
\n6、统一领导和管理本行政区域内气象部门的计划财务、人事劳动、科研和培训以及业务建设等工作；合同区、县人民政府对所辖气象机构实施以部门为主的双重管理；会同地方党委好人民政府做好当地气象部门的精神文明建设和思想政治工作。
\n7、承担陕西省气象局和西安市人民政府交办的其他事项。</string>
	<string name="aqi_level1">优</string>
	<string name="aqi_level2">良</string>
	<string name="aqi_level3">轻度污染</string>
	<string name="aqi_level4">中度污染</string>
	<string name="aqi_level5">重度污染</string>
	<string name="aqi_level6">严重污染</string>
	<string name="aqi1_text">空气质量令人满意，基本无空气污染，各类人群可正常活动。</string>
    <string name="aqi2_text">空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响，建议极少数异常敏感人群应减少户外活动。</string>
    <string name="aqi3_text">易感人群症状有轻度加剧，健康人群出现刺激症状。建议儿童、老年人及心脏病、呼吸系统疾病患者应减少长时间、高强度的户外锻炼。</string>
    <string name="aqi4_text">进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响，建议疾病患者避免长时间、高强度的户外锻练，一般人群适量减少户外运动。</string>
    <string name="aqi5_text">心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群普遍出现症状-建议儿童、老年人和心脏病、肺病患者应停留在室内，停止户外运动，一般人群减少户外运动。</string>
    <string name="aqi6_text">健康人群运动耐受力降低，有明显强烈症状，提前出现某些疾病-建议儿童、老年人和病人应当留在室内，避免体力消耗，一般人群应避免户外活动。</string>
	<string name="main0">晴</string>
	<string name="main1">多云</string>
	<string name="main2">阴</string>
	<string name="main3">雨</string>
	<string name="main4">雪</string>
	<string name="main5">雾霾</string>
	<string name="type0">云量</string>
	<string name="type0level0">万里无云</string>
	<string name="type0level1">几缕薄云</string>
	<string name="type0level2">几坨棉花</string>
	<string name="type0level3">遮天蔽日</string>
	<string name="type0level4">乌云满天</string>
	<string name="type1">雨量</string>
	<string name="type1level0">零星小雨</string>
	<string name="type1level1">淅淅沥沥</string>
	<string name="type1level3">雨水如注</string>
	<string name="type1level5">暴雨成灾</string>
	<string name="type2">雪量</string>
	<string name="type2level0">似有似无</string>
	<string name="type2level1">零星小雪</string>
	<string name="type2level2">飘落雪花</string>
	<string name="type2level3">鹅毛大雪</string>
	<string name="type2level4">暴雪纷飞</string>
	<string name="type3">能见度</string>
	<string name="type3level1">稍有薄雾</string>
	<string name="type3level3">视线受阻</string>
	<string name="type4">雷</string>
	<string name="type4level5">电闪雷鸣</string>
	<string name="type5">冰雹</string>
	<string name="type5level5">冰雹来袭</string>
	<string name="type6">沙</string>
	<string name="type6level1">雾霾侵袭</string>
	<string name="type6level3">沙尘肆掠</string>
    <string name="day">天</string>
    <string name="no_statics">未统计</string>
    <string name="from">自</string>
    <string name="to">至</string>
    <string name="highest_temp">日最高气温</string>
    <string name="lowest_temp">日最低气温</string>
    <string name="max_speed">日最大风速</string>
    <string name="max_fall">日最大降水量</string>
    <string name="lx_no_fall">连续无降水日数</string>
    <string name="lx_no_mai">连续霾日数</string>
    <string name="last_page">已经是最后一页</string>
    <string name="write_feedback">欢迎写下您宝贵的建议...</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功，感谢您的宝贵建议！</string>
    <string name="warning_guide">预警指南：\n\n</string>
    <string name="no_warning">暂无预警信息发布</string>
    <string name="tiao">条</string>
</resources>