<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:background="@drawable/corner_top_white"
        android:gravity="center"
        android:text="@string/auto_update"
        android:textColor="#1e90ff"
        android:textSize="@dimen/level_3" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="0.5dip"
        android:background="#1e90ff" />

    <ScrollView
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:background="@color/white"
        android:padding="10dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@drawable/pgy_scroll_bar" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/level_4" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/level_5" />
        
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="240dp"
        android:layout_height="0.5dip"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="40dip"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/llNegative"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/pgy_left_btn"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvNegtive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_later"
                android:textColor="@color/text_color2"
                android:textSize="@dimen/level_4" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dip"
            android:layout_height="40dip"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/llPositive"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/pgy_right_btn"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_right_now"
                android:textColor="@color/white"
                android:textSize="@dimen/level_4" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>