<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:overScrollMode="never"
        android:paddingBottom="15dp"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_setting_item"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_2" />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_logout"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/logout"
                    android:textColor="@color/title_bg"
                    android:textSize="@dimen/level_5" />
            </LinearLayout>

            <TextView
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/ll1"
                android:layout_margin="20dp"
                android:background="#90ffffff" />

            <LinearLayout
                android:id="@+id/llFeedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider1"
                android:background="@drawable/selector_setting_item"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/iv_feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/setting_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llClearCache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llFeedBack"
                android:background="@drawable/selector_setting_item"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/iv_remove" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/setting_clearcache"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <TextView
                    android:id="@+id/tvCache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llClearCache"
                android:background="@drawable/selector_setting_item"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/iv_intro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/setting_build"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llIntro"
                android:background="@drawable/selector_setting_item"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/iv_version" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/setting_version"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivCode"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/llVersion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/iv_download_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivCode"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="扫描二维码下载广西气象App"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>